compiler/test/parse-err/cmp-bool-unsupported.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func CmpBoolUnsupported(
    // expected-note@below{{operands have semiring bool}}
    a: bool, b: bool) -> bool {
    // Comparison is not supported for bool semiring (only int, real, trop_real)
    // expected-error@below{{ordered compare is only supported for int and real semirings}}
    return a < b;
}
